--- a/_includes/image.html
+++ b/_includes/image.html
@@ -6,11 +6,17 @@
   {% assign style = '' %}
 {% endif %}
 
+{% assign class = include.class | prepend: "media media-image " %}
+{% assign style = include.style | prepend: style %}
+{% assign src   = include.uri | prepend: site.baseurl %}
+{% assign alt   = include.alt %}
+
 <div>
-  <img
-    class='{{ include.class | prepend: "media media-image " }}'
-    style='{{ include.style | prepend: style }}'
-    src='{{ include.uri | prepend: site.baseurl }}'
-    alt='{{ include.alt }}'
-  >
+  {% if include.clickable == true %}
+  <a href='{{ src }}'>
+    <img class='{{ class }}' style='{{ style }}' src='{{ src }}' alt='{{ alt }}'>
+  </a>
+  {% else %}
+  <img class='{{ class }}' style='{{ style }}' src='{{ src }}' alt='{{ alt }}'>
+  {% endif %}
 </div>
