--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     </div>
     {% include footer.html %}
 
-    {% if page.carousel %}
+    {% if page.flexslider %}
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="{{ "/js/jquery.flexslider-min.js" | relative_url }}"></script>
     <script src="{{ "/js/app.js" | relative_url }}"></script>
