Make image link open new tab

--- a/_includes/image.html
+++ b/_includes/image.html
@@ -13,7 +13,7 @@
 
 <div>
   {% if include.clickable == true %}
-  <a href='{{ src }}'>
+  <a href='{{ src }}' target='_blank'>
     <img class='{{ class }}' style='{{ style }}' src='{{ src }}' alt='{{ alt }}'>
   </a>
   {% else %}
