Add slider include

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,8 @@
 
     {% if page.flexslider %}
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-    <script src="{{ "/js/jquery.flexslider-min.js" | relative_url }}"></script>
+    <script src="{{ "/js/jquery.flexslider.min.js" | relative_url }}"></script>
+    <script src="{{ "/js/lightbox.min.js" | relative_url }}"></script>
     <script src="{{ "/js/app.js" | relative_url }}"></script>
     {% endif %}
   </body>
