--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -427,30 +427,17 @@ html, body {
   margin-bottom: $spacing-unit/2;
   font-weight: 100;
   letter-spacing:1px;
-  img {
-    margin:0;
-    padding:0;
+  color: $text-color-light;
+  background-color: $grey-color-dark;
+  figure a img {
+    position: relative; // needed for vertical centering jquery
   }
   figcaption {
+    width: 96%;
+    padding: 2%;
     p {
       margin: 0;
       padding: 0;
     }
-    padding: $spacing-unit/2;
-    padding-top: $spacing-unit/4;
-    color: $text-color-light;
-    background-color: $grey-color-dark;
   }
-}
-
-.slider-image {
-  display: table;
-  height: 740px;
-  line-height: 100%;
-}
-
-.slider-image a {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
 }
