--- a/_layouts/portfolio-post.html
+++ b/_layouts/portfolio-post.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-<article class="work-post" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
   <header>
-    <h1 class="work-post-title" itemprop="name headline">{{ page.title }}</h1>
-    <h2 class="work-post-date">{{ page.date | date: "%b %Y" }}</h2>
+    <h2 class="post-title" itemprop="name headline">{{ page.title }}</h2>
+    <h3 class="post-date">{{ page.date | date: "%b %Y" }}</h3>
   </header>
-  <div class="work-content" itemprop="articleBody">
+  <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
 </article>
