--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -131,7 +131,12 @@ pre {
 }
 
 code {
-  padding:1px 5px;
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+  font-size: inherit;
+  font-weight: 100;
 }
 
 /** Wrapper */
