--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/flexslider.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/swipebox.css" | prepend: site.baseurl }}">
-  <link rel="icon" type="image/png" href="{{ '/assets/img/t.png' |  prepend: site.url }}">
+  <link rel="icon" type="image/png" href="{{ '/assets/img/site/t.png' |  prepend: site.url }}">
   {%- if page.equations -%}
   {% include mathjax.html %}
   {%- endif -%}
