--- a/_includes/discuss.html
+++ b/_includes/discuss.html
@@ -5,10 +5,10 @@
  *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
  */
 
-// var disqus_config = function () {
-//     this.page.url = {{ page.url | absolute_url }};
-//     this.page.identifier = {{ page.id }};
-// };
+var disqus_config = function () {
+    this.page.url = "{{ page.url | absolute_url }}";
+    this.page.identifier = "{{ page.id }}";
+};
 
 (function() { // DON'T EDIT BELOW THIS LINE
   var d = document, s = d.createElement('script');
